# melloc

./: .gitignore  CMakeLists.txt  README.md
include/: arena.h  atomic_guard.h  bin.h  melloc.h  melloc_defs.h  melloc_utils.h  thread_descriptor.h
src/: arena.cpp  bin.cpp  decay.cpp  demo.cpp  internal_dense_alloc.cpp  melloc.cpp  melloc_templated.cpp  thread_descriptor.cpp
